@@ -6,6 +6,11 @@ TOOLKIT
 
   * General
 
+- Added support for the property "filecomparer.skip-symlinks" which causes
+  symlink/alias files to be ignored by JetS3t applications when deciding
+  which files to send to S3. Although "soft" links can be detected and 
+  ignored, hard links cannot be detected and will be treated as ordinary 
+  files.   
 - Added support for the TargetGrants setting of logged S3 buckets. This
   allows you to set default ACL access permissions for S3 bucket logs
   generated by the service.
